@@ -19,7 +19,9 @@ Build-Depends: debhelper (>= 9~),
                lsof,
 # Required for building the documentation
                mkdocs,
-               moreutils
+               moreutils,
+# Required for building the man pages
+               ruby-ronn
 Standards-Version: 3.9.6
 Homepage: https://github.com/xtaran/unburden-home-dir
 Vcs-Git: git://github.com/xtaran/unburden-home-dir.git
