@@ -1,0 +1,7 @@
+all: unburden-home-dir.1
+
+%.1: %.1.md
+	ronn --manual="Unburden Your Home Directory" -r $<
+
+clean:
+	rm -f *.[0-9]
