@@ -1,95 +1,0 @@
-.TH UNBURDEN-HOME-DIR "1" "Dec 2012" "Unburden Home Directory" "User Commands"
-.SH NAME
-unburden\-home\-dir \- unburdens home directories from caches and trashes
-.SH SYNOPSIS
-.B unburden\-home\-dir
-[ \fB-n\fR | \fB-u\fR | \fB-f\fR \fIfilter\fR ]
-.br
-.B unburden\-home\-dir
-( \fB\-h\fR | \fB\-\-help\fR | \fB\-\-version\fR )
-.SH DESCRIPTION
-unburden\-home\-dir unburdens the home directory from files and
-directory which cause high I/O or disk usage but are neither important
-if they are lost, e.g. caches or trash directory.
-.PP
-When being run it moves the files and directories given in the
-configuration file to a location outside the home directory,
-e.g. \fI/tmp\fR or \fI/scratch\fR, and puts appropriate symbolic links
-in the home directory instead.
-.SH OPTIONS
-.TP
-\fB\-b\fR
-use the given string as basename instead of "unburden-home-dir".
-.TP
-\fB\-c\fR
-read an additional configuration file.
-.TP
-\fB\-C\fR
-read only the given configuration file
-.TP
-\fB\-f\fR
-just unburden those directory matched by the given filter (a perl
-regular expression) \(em it matches the already unburdened
-directories if used together with \fB\-u\fR.
-.TP
-\fB\-F\fR
-Do not check for files in use with lsof before (re)moving files.
-.TP
-\fB\-l\fR
-read an additional list file
-.TP
-\fB\-L\fR
-read only the given list file
-.TP
-\fB\-n\fR
-dry run (show what would be done)
-.TP
-\fB\-u\fR
-undo (reverse the functionality and put stuff back into the home
-directory)
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-show this help
-.TP
-\fB\-\-version\fR
-show the program's version
-.SH EXAMPLES
-Example configuration files can be found at
-\fI/usr/share/doc/unburden-home-dir/examples\fR on Debian-based
-systems and in the \fIetc/\fR directory of the source tar ball.
-.SH FILES
-\fI/etc/unburden-home-dir\fR,
-\fI/etc/unburden-home-dir.list\fR,
-\fI~/.unburden-home-dir\fR,
-\fI~/.unburden-home-dir.list\fR,
-\fI~/.config/unburden-home-dir/config\fR,
-\fI~/.config/unburden-home-dir/list\fR,
-\fI/etc/default/unburden-home-dir\fR,
-\fI/etc/X11/Xsession.d/95unburden-home-dir\fR
-.PP
-Read the documentation at either
-\fI/usr/share/doc/unburden-home-dir/site/\fR on debianoid
-installations, at \fIhttp://unburden-home-dir.readthedocs.org/\fR
-online, or in the \fIdocs\fR directory in the source tar ball for an
-explanation of these files.
-.SH "SEE ALSO"
-\fBcorekeeper\fR (\fIhttp://packages.debian.org/corekeeper\fR),
-\fBautotrash\fR(1),
-\fBagedu\fR(1),
-\fBbleachbit\fR(1).
-\fBmundus\fR (\fIhttp://www.mundusproject.org/\fR).
-\fBcomputer-janitor\fR(1).
-.PP
-Of, course, \fBdu\fR(1) can help you to find potential files or
-directories to handle by unburden-home-dir, but there are quite some
-\fBdu\fR(1)-like tools out there which are way more comfortable,
-e.g. \fBncdu\fR(1) (text-mode), \fBbaobab\fR(1) (GNOME),
-\fBfilelight\fR(1) (KDE), \fBxdiskusage\fR(1) (X tool calling
-\fBdu\fR(1) itself), or \fBxdu\fR(1) (X tool reading \fBdu\fR(1)
-output from STDIN).
-.SH AUTHOR
-Unburden Home Dir is written and maintained by Axel Beckert
-<\fIbeckert@phys.ethz.ch\fR>
-.SH LICENSE
-Unburden Home Dir is available under the terms of the GNU General
-Public License (GPL) version 2 or any later version at your option.
